cabal-version:      3.0
name:               jolharg-reflex
version:            0.2.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files: CHANGELOG.md

-- TODO investigate data

library
  exposed-modules:
    Service.Auth
    Service.TH
    Service.User
    Service.XSRF
    UI.Bootstrap.Button
    UI.Bootstrap.Form
    UI.Bootstrap.Modal
    UI.Bootstrap.Pane
    UI.Bootstrap.TabbedNav
    UI.Head
    UI.Tab.Login
    UI.Tab.Register
    UI.Table.Cell
    UI.Table.CSSClasses

  -- , UI.Tab.TH
  -- other-extensions:
  build-depends:
    , base                      >=4.12     && <4.22
    , containers                ^>=0.7
    , cookie                    ^>=0.5.0
    , jolharg-models            ^>=0.2.0.0
    , jolharg-servant-examples  ^>=0.2.0.0
    , jolharg-web-models        ^>=0.2.0.0
    , jolharg-web-types         ^>=0.2.0.0
    , jsaddle-dom               ^>=0.9.9.2
    , lens                      ^>=5.3.3
    , reflex-dom                ^>=0.6.3.3
    , servant                   ^>=0.20.2
    , servant-reflex            ^>=0.3.5
    , template-haskell          ^>=2.22.0
    , text                      ^>=2.1.2

  -- for ghc 9.10.1
  -- , aeson                ^>=2.2.3.0
  -- , bytestring           ^>=0.12.2.0
  -- , containers-extra
  -- , random ^>=1.3.0
  -- , time                 ^>=1.14
  -- , uuid-types ^>=1.0.6
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations -Wno-prepositive-qualified-module

  -- these don't work on ghcjs yet
  -- -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
  -- -Wno-missing-local-signatures
  cpp-options:        -DGHCJS_BROWSER
  hs-source-dirs:     lib
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

test-suite jolharg-reflex-test
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  main-is:            Spec.hs

  if !arch(wasm32)
    ghc-options:
      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
      -Wno-all-missed-specialisations -Wno-missed-specialisations
      -Wno-prepositive-qualified-module -Wno-missing-role-annotations
      -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
      -Wno-unrecognised-warning-flags -Wno-missed-specialisations

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations -Wno-prepositive-qualified-module

  -- these don't work on ghcjs yet
  -- -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
  -- -Wno-missing-local-signatures
  cpp-options:        -DGHCJS_BROWSER
  build-depends:
    , base   >=4.12     && <4.22
    , hspec  ^>=2.11.10

  -- , jolharg-reflex
  -- , hspec-core ^>=2.11.10
  -- , hspec-expectations ^>=0.8.4
  -- , HUnit
  -- , QuickCheck ^>=2.15.0.1
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
