cabal-version:      3.14
name:               jolharg-reflex
version:            0.3.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         cabal@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- TODO investigate data

library
  exposed-modules:
    Service.Auth
    Service.TH
    Service.User
    Service.XSRF
    UI.Bootstrap.Button
    UI.Bootstrap.Form
    UI.Bootstrap.Modal
    UI.Bootstrap.Pane
    UI.Bootstrap.SourcePicker
    UI.Bootstrap.TabbedNav
    UI.Icon.FontAwesome
    UI.Head
    UI.Tab.Login
    UI.Tab.Register
    UI.Table.Cell
    UI.Table.CSSClasses

  -- , UI.Tab.TH
  -- other-extensions:
  build-depends:
    , base                      ^>=4.22
    , containers                ^>=0.8
    , cookie                    ^>=0.5
    , jolharg-models            ^>=0.3
    , jolharg-servant-examples  ^>=0.3
    , jolharg-web-models        ^>=0.3
    , jolharg-web-types         ^>=0.3
    , jsaddle-dom               ^>=0.9.9.2
    , lens                      ^>=5.3.3
    , reflex-dom                ^>=0.6.3.4
    , servant                   ^>=0.20.3
    , servant-reflex            ^>=0.4
    , template-haskell          >=2.23 && <2.25
    , text                      ^>=2.1.2

  -- for ghc 9.10.1
  -- , aeson                ^>=2.2.3
  -- , bytestring           ^>=0.12.2
  -- , containers-extra
  -- , random ^>=1.3
  -- , time                 ^>=1.15
  -- , uuid-types ^>=1.0.6
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations -Wno-prepositive-qualified-module
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures

  cpp-options:        -DGHCJS_BROWSER
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

test-suite jolharg-reflex-test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  main-is:            Spec.hs
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-prepositive-qualified-module

  cpp-options:        -DGHCJS_BROWSER
  build-depends:
    , base   ^>=4.22
    , hspec  ^>=2.11.15

  -- , jolharg-reflex
  -- , hspec-core ^>=2.11.15
  -- , hspec-expectations ^>=0.8.4
  -- , HUnit
  -- , QuickCheck ^>=2.17
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
